--- a/static/main.css
+++ b/static/main.css
@@ -1,13 +1,17 @@
 body {
-  padding-top: 50px;
+  min-height: 2000px;
+  padding-top: 70px;
+}
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
 }
 .starter-template {
   padding: 40px 15px;
   text-align: center;
 }
-
 .form-signin {
-  max-width: 330px;
+  max-width: 500px;
   padding: 15px;
   margin: 0 auto;
 }
