rozbicie testow na te dotyczace usersow i coursesgrades

--- a/templates/create.html
+++ b/templates/create.html
@@ -41,10 +41,10 @@
         <input type="text" name="inputAccessTokenSecret" id="inputAccessTokenSecret" class="form-control" value="JwSUygmyJ85Pp3g9LfJsDnk48MkfYWQzg7Chhd7Y" required>
         <label for="inputUrl" class="sr-only">Access Token Key</label>
         <input type="text" name="inputUrl" id="inputUrl" class="form-control" value="https://usosapps.uw.edu.pl/" required>
-        <label for="inputConsumerKey" class="sr-only">Consumer Key</label>
-        <input type="text" name="inputConsumerKey" id="inputConsumerKey" class="form-control" value="KBt6uWPWUekUzFtNTyY9" required>
-        <label for="inputConsumerSecret" class="sr-only">Consumer Secret</label>
-        <input type="text" name="inputConsumerSecret" id="inputConsumerSecret" class="form-control" value="Bm7wwuKSekhZKFs77GmP4vxHKgf4B7nFmSzUfWeG" required>
+        <!--<label for="inputConsumerKey" class="sr-only">Consumer Key</label>-->
+        <!--<input type="text" name="inputConsumerKey" id="inputConsumerKey" class="form-control" value="KBt6uWPWUekUzFtNTyY9" required>-->
+        <!--<label for="inputConsumerSecret" class="sr-only">Consumer Secret</label>-->
+        <!--<input type="text" name="inputConsumerSecret" id="inputConsumerSecret" class="form-control" value="Bm7wwuKSekhZKFs77GmP4vxHKgf4B7nFmSzUfWeG" required>-->
         <input type="hidden" name="next" value="/" />
         <button class="btn btn-lg btn-primary btn-block" type="submit">Create user</button>
       </form>
