--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
         <input type="password" name="inputAccessTokenKey" id="inputAccessTokenKey" class="form-control" placeholder="access_token_key" required autofocus>
         <label for="inputAccessTokenSecret" class="sr-only">Access Token Secret</label>
         <input type="password" name="inputAccessTokenSecret" id="inputAccessTokenSecret" class="form-control" placeholder="access_token_secret" required>
-        <input type="hidden" name="next" value="/" />
+        <input type="hidden" name="NEXT_PAGE" value="{{NEXT_PAGE}}" />
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
 
