--- a/templates/create.html
+++ b/templates/create.html
@@ -37,9 +37,14 @@
         <h2 class="form-signin-heading">Create user</h2>
 
         <label for="usos">Select your USOS instance:</label>
-        <!--TODO: tutaj wczytac dane usosow z /api/usoses-->
+
+        <!--
+        <option value="[{'name':'UW','url':'http://urlUW','consumer_key':'xxUWUWUW','consumer_secret':'yyUWyy'}]">Uniwersytet Warszawski</option>
+        -->
         <select name="usos">
-          <option value="[{'name':'UW','url':'http://urlUW','consumer_key':'xxUWUWUW','consumer_secret':'yyUWyy'}]">Uniwersytet Warszawski</option>
+          {% for usos in usoses %}
+          <option value="{{usos['url']}}">{{usos['name']}}</option>
+          {% end %}
         </select>
         <input type="hidden" name="next" value="/" />
         <button class="btn btn-lg btn-primary btn-block" type="submit">Create user</button>
