--- a/templates/chat.html
+++ b/templates/chat.html
@@ -2,6 +2,18 @@
     <ul class="nav navbar-nav navbar-right">
         <table>
             <tr>
+                napisz do:
+                <select name="osoba">
+                    <option value="Janek">Janek</option>
+                    <option value="Tomek">Tomek</option>
+                </select>
+                <td>
+                    treść:<input type="text">
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
                 <td>Agnieszka</td>
                 <td>
                     wpisz:<input type="text">
