--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block main %}
 <div>
     <ul class="nav navbar-nav navbar-right">
         <table>
@@ -35,3 +37,4 @@
     </ul>
 
 </div>
+{% end %}
