--- a/templates/base.html
+++ b/templates/base.html
@@ -34,9 +34,16 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
              {% if current_user %}
-              <li><a href="/school">Szkoła</a></li>
+              <li class="dropdown">
+                <a href="/school" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Szkoła <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/school/courses">Przedmioty</a></li>
+                    <li><a href="/school/grades">Oceny</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="/friends">Znajomi</a></li>
+                  </ul>
+             </li>
               <li><a href="/chat">Wiadomości</a></li>
-              <li><a href="/friends">Znajomi</a></li>
               <li><a href="/settings">Ustawienia</a></li>
               <li><a href="/authentication/logout">Logout</a></li>
              {% else %}
