--- a/templates/school-grades.html
+++ b/templates/school-grades.html
@@ -6,5 +6,6 @@
 {% end %}
 
 {% block extra_js %}
-    <script src="{{ static_url("main.js") }}"></script>
+    <script src="{{ static_url("main-grades.js") }}"></script>
 {% end %}
+s
