--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -56,7 +56,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container" id="base-container-id">
 
       {% block main %}
 
@@ -89,6 +89,7 @@
         });
     </script>
 
+    <script src="{{ static_url("HtmlHelper.js") }}"></script>
     <script src="{{ static_url("main.js") }}"></script>
 
     {% block extra_js %}
