--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -37,8 +37,10 @@
               <li class="dropdown">
                 <a href="/school" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Szkoła <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                    <li><a href="/school/terms">Semestry</a></li>
                     <li><a href="/school/courses">Przedmioty</a></li>
                     <li><a href="/school/grades">Oceny</a></li>
+
                     <li role="separator" class="divider"></li>
                     <li><a href="/friends">Znajomi</a></li>
                   </ul>
