--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -37,6 +37,8 @@
               <li class="dropdown">
                 <a href="/school" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Szkoła <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                    <li><a href="/user">Użytkownik</a></li>
+                    <li role="separator" class="divider"></li>
                     <li><a href="/school/terms">Semestry</a></li>
                     <li><a href="/school/courses">Przedmioty</a></li>
                     <li><a href="/school/grades">Oceny</a></li>
@@ -53,7 +55,9 @@
               <li><a href="/authentication/create">Create user</a></li>
              {% end %}
           </ul>
-          <h3 class="text-muted" href="/">{{PROJECT_TITLE}}</h3>
+
+          <a class="navbar-brand" href="{{DEPLOY_URL}}">{{PROJECT_TITLE}}</a>
+
         </div><!--/.nav-collapse -->
       </div>
     </nav>
