--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -34,17 +34,21 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
              {% if current_user %}
+              <li><a href="/user">Użytkownik</a></li>
               <li class="dropdown">
                 <a href="/school" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Szkoła <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/user">Użytkownik</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="/school/terms">Semestry</a></li>
                     <li><a href="/school/courses">Przedmioty</a></li>
                     <li><a href="/school/grades">Oceny</a></li>
-
+                    <li><a href="/school/terms">Semestry</a></li>
+                  </ul>
+             </li>
+              <li class="dropdown">
+                <a href="/friends" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Znajomi <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/friends">Moi Znajomi</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="/friends">Znajomi</a></li>
+                    <li><a href="/friends/suggestions">Dodaj znajomych</a></li>
                   </ul>
              </li>
               <li><a href="/chat">Wiadomości</a></li>
