grades frontend ready

--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -47,8 +47,7 @@
                 <a href="/friends" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Znajomi <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="/friends">Moi Znajomi</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="/friends/suggestions">Dodaj znajomych</a></li>
+                    <li><a href="/friends/suggestions">Szukaj znajomych</a></li>
                   </ul>
              </li>
               <li><a href="/chat">Wiadomości</a></li>
