--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -35,6 +35,7 @@
           <ul class="nav navbar-nav navbar-right">
              {% if current_user %}
               <li><a href="/user">Użytkownik</a></li>
+              <li><a href="/user">Plan Zajęć</a></li>
               <li class="dropdown">
                 <a href="/school" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Szkoła <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -50,11 +51,7 @@
                     <li><a href="/friends/suggestions">Szukaj znajomych</a></li>
                   </ul>
              </li>
-              <li><a href="/chat">Wiadomości</a></li>
-
-              <!--
               <li><a href="/settings">Ustawienia</a></li>
-              -->
 
               <li><a href="/authentication/logout">Logout</a></li>
              {% else %}
