--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav navbar-right">
              {% if current_user %}
               <li><a href="/user">Użytkownik</a></li>
-              <li><a href="/user">Plan Zajęć</a></li>
+              <li><a href="/school/schedule">Plan Zajęć</a></li>
               <li class="dropdown">
                 <a href="/school" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Szkoła <span class="caret"></span></a>
                 <ul class="dropdown-menu">
