--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -34,7 +34,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
              {% if current_user %}
-              <li><a href="/user">Użytkownik</a></li>
+              <li><a href="/users">Użytkownik</a></li>
               <li><a href="/school/schedule">Plan Zajęć</a></li>
               <li class="dropdown">
                 <a href="/school" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Szkoła <span class="caret"></span></a>
