fix https://github.com/dzizes/usosapi/issues/31 https://github.com/dzizes/usosapi/issues/22

--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -53,10 +53,10 @@
              </li>
               <li><a href="/settings">Ustawienia</a></li>
 
-              <li><a href="/authentication/logout">Logout</a></li>
+              <li><a href="/authentication/logout">Wyloguj</a></li>
              {% else %}
-              <li><a href="/authentication/login">Login</a></li>
-              <li><a href="/authentication/create">Create user</a></li>
+              <li><a href="/authentication/login">Zaloguj</a></li>
+              <li><a href="/authentication/register">Rejestracja</a></li>
              {% end %}
           </ul>
 
