login as dropdown

--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -55,7 +55,14 @@
 
               <li><a href="/authentication/logout">Wyloguj</a></li>
              {% else %}
-              <li><a href="/authentication/login">Zaloguj</a></li>
+              <li class="dropdown">
+                <a href="/authentication/login" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Zaloguj <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="{{DEPLOY_URL}}/authentication/google">Google +</a></li>
+                  </ul>
+             </li>
+
+
               <li><a href="/authentication/register">Rejestracja</a></li>
              {% end %}
           </ul>
