changed friends remove and add to post

--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -47,7 +47,7 @@
               <li class="dropdown">
                 <a href="/friends" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Znajomi <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/friends">Dodani Znajomi</a></li>
+                    <li><a href="/friends">Znajomi</a></li>
                     <li><a href="/friends/suggestions">Szukaj znajomych</a></li>
                   </ul>
              </li>
