Add unit type to courses #28

--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -58,7 +58,7 @@
               <li class="dropdown">
                 <a href="/authentication/login" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Zaloguj <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="{{DEPLOY_URL}}/authentication/google">Google +</a></li>
+                    <li><a href="{{DEPLOY_URL}}/authentication/google">Przez Google</a></li>
                   </ul>
              </li>
 
