--- a/usosapi/templates/register.html
+++ b/usosapi/templates/register.html
@@ -20,7 +20,7 @@
         </div>
 
         <button class="btn btn-primary btn-danger"
-                onclick="location.href = 'http://localhost:8888/authentication/google'">Register using Google+
+                onclick="location.href = 'http://localhost:8888/authentication/google'">Rejestracja przez Google
         </button>
 
 
