https://github.com/dzizes/usosapi/issues/43

--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -42,6 +42,8 @@
                     <li><a href="/school/courses">Przedmioty</a></li>
                     <li><a href="/school/grades">Oceny</a></li>
                     <li><a href="/school/terms">Semestry</a></li>
+                    <li><a href="/school/programmes">Programy</a></li>
+                    <li><a href="/school/teachers">Belfrowie</a></li>
                   </ul>
              </li>
               <li class="dropdown">
