--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -43,7 +43,7 @@
                     <li><a href="/school/grades">Oceny</a></li>
                     <li><a href="/school/terms">Semestry</a></li>
                     <li><a href="/school/programmes">Programy</a></li>
-                    <li><a href="/school/teachers">Belfrowie</a></li>
+                    <li><a href="/school/lecturers">Belfrowie</a></li>
                   </ul>
              </li>
               <li class="dropdown">
