--- a/usosapi/templates/create.html
+++ b/usosapi/templates/create.html
@@ -16,7 +16,7 @@
             </div>
             -->
             <div class="form-group">
-                <label for="usos-id" class="col-sm-2 control-label">Konto w USOS</label>
+                <label for="usos-id" class="col-sm-2 control-label">Wybierz w USOS</label>
                 <div class="col-sm-4">
                     <select id="usos-id" name="usos" class="form-control" autofocus>
                     {% for usos in usoses %}
@@ -30,7 +30,7 @@
                 <div class="col-sm-offset-2 col-sm-10">
 
                 <input type="hidden" name="next" value="/"/>
-                <button class="btn btn-default btn-primary" type="submit">Zaloguj</button>
+                <button class="btn btn-default btn-primary" type="submit">Połącz</button>
                 </div>
             </div>
         </form>
