--- a/usosapi/templates/base.html
+++ b/usosapi/templates/base.html
@@ -12,12 +12,14 @@
 
     <title>{{PROJECT_TITLE}}</title>
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-    <!-- Custom styles for this template -->
+    <link href="{{ static_url('bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ static_url('main.css') }}" rel="stylesheet">
+
+    <script type="text/javascript" src="{{ static_url('require.config.js') }}"></script>
+    <!-- konfiguracja require
+    <script type="text/javascript" data-main="static/js/startup"
+            src="{{ static_url('bower_components/requirejs/require.js') }}"></script>
+    -->
 
   </head>
   <body>
@@ -90,15 +92,9 @@
       </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-            integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
+    <!-- Bootstrap core JavaScript TODO: REMOVE after SPA migration-->
+    <script src="{{ static_url('bower_components/jquery/dist/jquery.min.js') }}"></script>
+    <script src="{{ static_url('bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
 
      <script>
          $(document).ready(function() {
