minor static changes

--- a/usosweb/templates/index.html
+++ b/usosweb/templates/index.html
@@ -11,7 +11,7 @@
 
     <script type="text/javascript" src="{{ static_url('require.config.js') }}"></script>
     <!-- konfiguracja require -->
-    <script type="text/javascript" data-main="static/js/startup"
+    <script type="text/javascript" data-main="{{ static_url('js/startup.js') }}"
             src="{{ static_url('bower_components/requirejs/require.js') }}"></script>
     <!-- zaladowanie require.js i glownego skryptu -->
 </head>
