--- a/usosweb/static/templates/courses.html
+++ b/usosweb/static/templates/courses.html
@@ -1,12 +1,11 @@
 <div class="panel panel-default">
-    <div class="panel-body">
-        <table class="table table-hover">
-            <caption>Informacje o użytkowniku</caption>
+  <div class="panel-body">
+    <table class="table table-hover">
+            <caption>Przedmioty</caption>
             <thead>
             <th></th><th></th>
             </thead>
             <tbody>
-
                 <tr><td>Imie</td><td>{{family_name}}</td></tr>
                 <tr><td>Nazwisko</td><td>{{name}} {{given_name}}</td></tr>
                 <tr><td>locale</td><td>{{locale}}</td></tr>
@@ -16,5 +15,5 @@
             </tbody>
 
         </table>
-    </div>
+  </div>
 </div>
