--- a/staraweb/static/templates/courses.html
+++ b/staraweb/static/templates/courses.html
@@ -1,19 +1,39 @@
-<div class="panel panel-default">
-  <div class="panel-body">
-    <table class="table table-hover">
-            <caption>Przedmioty</caption>
-            <thead>
-            <th></th><th></th>
-            </thead>
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  {{#data}}
+    <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="heading{{term}}">
+            <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{term_counter}}"
+                   aria-expanded="true" aria-controls="collapse{{term_counter}}">
+                    Semestr <strong>{{term}}</strong>
+                </a>
+            </h4>
+        </div>
+    <div id="collapse{{term_counter}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{term_counter}}">
+      <div class="panel-body">
+          <table class="table table-strip">
             <tbody>
-                <tr><td>Imie</td><td>{{family_name}}</td></tr>
-                <tr><td>Nazwisko</td><td>{{name}} {{given_name}}</td></tr>
-                <tr><td>locale</td><td>{{locale}}</td></tr>
-                <tr><td>user_type</td><td>{{user_type}}</td></tr>
-                <tr><td>Email</td><td>{{email}}</td></tr>
-                <tr><td></td><td><img src="{{picture}}" class="img-responsive" alt="Responsive image"></td></tr>
+            {{#term_data}}
+                <tr>
+                    <td>{{course_id}}</td>
+                    <td>{{course_name.pl}}</td>
+                    <td>
+                        <table class="table"><tbody>
+                        {{#groups}}
+                        <tr>
+                            <td>{{class_type_id}}</td>
+                            <td>{{course_unit_id}}</td>
+                            <td>{{group_number}}</td>
+                        </tr>
+                        {{/groups}}
+                        </tbody></table>
+                    </td>
+                </tr>
+              {{/term_data}}
             </tbody>
-
-        </table>
+            </table>
+      </div>
+    </div>
   </div>
+  {{/data}}
 </div>
