--- a/staraweb/static/templates/user.html
+++ b/staraweb/static/templates/user.html
@@ -10,6 +10,7 @@
                 <tr><td>Nazwisko</td><td>{{name}} {{given_name}}</td></tr>
                 <tr><td>locale</td><td>{{locale}}</td></tr>
                 <tr><td>Email</td><td>{{email}}</td></tr>
+                <tr><td>Data utworzenia</td><td>{{user_creation}}</td></tr>
                 <tr><td></td><td><img src="{{picture}}" class="img-responsive" alt="Responsive image"></td></tr>
             </tbody>
         </table>
@@ -28,7 +29,6 @@
                 <tr><td>Email</td><td>{{user_email}}</td></tr>
 
                 <tr><td>Programy</td><td></td></tr>
-                <tr><td></td><td></td></tr>
                 {{#student_programmes}}
                     <tr><td>{{id}}</td><td>{{programme.description.pl}}</td></tr>
                 {{/student_programmes}}
