--- a/staraweb/static/templates/lecturers.html
+++ b/staraweb/static/templates/lecturers.html
@@ -1,5 +1,25 @@
 <div class="panel panel-default">
-  <div class="panel-body">
-    Hello, {{hello}}!
-  </div>
+    <div class="panel-body">
+        <table class="table table-hover">
+            <caption>Nauczyciele</caption>
+            <thead>
+            <th>Imie</th>
+            <th>Nazwisko</th>
+            <th>User Id</th>
+            <th>Id</th>
+            </thead>
+            <tbody>
+
+            {{#data}}
+            <tr>
+                <td>{{first_name}}</td>
+                <td>{{last_name}}</td>
+                <td>{{user_id}}</td>
+                <td>{{id}}</td>
+            </tr>
+            {{/data}}
+
+            </tbody>
+        </table>
+    </div>
 </div>
